--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/src/assets/KKM UMC 2025 (3).ico">
-    <link rel="shortcut icon" href="/src/assets/KKM UMC 2025 (3).ico">
+    <link rel="icon" type="image/webp" href="/src/assets/logo-sindangpano.png">
+    <link rel="shortcut icon" href="/src/assets/logo-sindangpano.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UMKM Desa Sindangpano</title>
     <meta name="description" content="Website resmi UMKM Desa Sindangpano yang menampilkan produk lokal seperti Keripik Emping, Roti, Opak, Keripik Pisang, dan Dodol." />
